fix style and overflow on personal account

--- a/src/components/contacts/accountItem.scss
+++ b/src/components/contacts/accountItem.scss
@@ -4,7 +4,6 @@
 }
 
 .personal-account {
-    width: fit-content;
     margin: auto;
 }
 
