--- a/src/components/personalAccountHeader.scss
+++ b/src/components/personalAccountHeader.scss
@@ -60,7 +60,7 @@
 .owners-acount {
     border-radius: 10px;
     width: 45%;
-    margin: 10px auto 10px auto;
+    margin: 0px auto 5px auto;
     padding: 10px;
     display: flex;
     flex-direction: column;
