--- a/src/pages/PaymentPage.scss
+++ b/src/pages/PaymentPage.scss
@@ -221,7 +221,7 @@ ion-content ion-toolbar {
 }
 
 .market-cards {
-  max-height: 50%;
+  height: 50%;
   display: flex;
   flex-direction: row;
   flex-grow: 1;
